--- a/public/src/qrcode.html
+++ b/public/src/qrcode.html
@@ -160,7 +160,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#" to="page2" >
+                            <a class="nav-link" href="#" to="page2">
                                 <span data-feather="file"></span>
                                 导入追溯码
                             </a>
@@ -176,6 +176,12 @@
             </nav>
 
             <main role="main" class="page col-md-9 ml-sm-auto col-lg-10 px-4" id="page1">
+                    <div class="alert  alert-success alert-dismissible fade hide" role="alert" >
+                            <strong>提交成功!</strong> 
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close" style="    padding: .5rem 1.25rem;">
+                              <span aria-hidden="true">&times;</span>
+                            </button>
+                          </div>
                 <!-- <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
               <h1 class="h2">Dashboard</h1>
               <div class="btn-toolbar mb-2 mb-md-0">
@@ -197,138 +203,27 @@
                     <table class="table table-striped table-sm">
                         <thead>
                             <tr>
-                                <th>#</th>
+                                <!-- <th>#</th> -->
                                 <th>批次</th>
                                 <th>物料</th>
                                 <th>区块ID</th>
                                 <th>追溯ID</th>
                             </tr>
                         </thead>
-                        <tbody>
-                            <tr>
-                                <td>1,001</td>
-                                <td>Lorem</td>
-                                <td>ipsum</td>
-                                <td>dolor</td>
-                                <td>sit</td>
-                            </tr>
-                            <tr>
-                                <td>1,002</td>
-                                <td>amet</td>
-                                <td>consectetur</td>
-                                <td>adipiscing</td>
-                                <td>elit</td>
-                            </tr>
-                            <tr>
-                                <td>1,003</td>
-                                <td>Integer</td>
-                                <td>nec</td>
-                                <td>odio</td>
-                                <td>Praesent</td>
-                            </tr>
-                            <tr>
-                                <td>1,003</td>
-                                <td>libero</td>
-                                <td>Sed</td>
-                                <td>cursus</td>
-                                <td>ante</td>
-                            </tr>
-                            <tr>
-                                <td>1,004</td>
-                                <td>dapibus</td>
-                                <td>diam</td>
-                                <td>Sed</td>
-                                <td>nisi</td>
-                            </tr>
-                            <tr>
-                                <td>1,005</td>
-                                <td>Nulla</td>
-                                <td>quis</td>
-                                <td>sem</td>
-                                <td>at</td>
-                            </tr>
-                            <tr>
-                                <td>1,006</td>
-                                <td>nibh</td>
-                                <td>elementum</td>
-                                <td>imperdiet</td>
-                                <td>Duis</td>
-                            </tr>
-                            <tr>
-                                <td>1,007</td>
-                                <td>sagittis</td>
-                                <td>ipsum</td>
-                                <td>Praesent</td>
-                                <td>mauris</td>
-                            </tr>
-                            <tr>
-                                <td>1,008</td>
-                                <td>Fusce</td>
-                                <td>nec</td>
-                                <td>tellus</td>
-                                <td>sed</td>
-                            </tr>
-                            <tr>
-                                <td>1,009</td>
-                                <td>augue</td>
-                                <td>semper</td>
-                                <td>porta</td>
-                                <td>Mauris</td>
-                            </tr>
-                            <tr>
-                                <td>1,010</td>
-                                <td>massa</td>
-                                <td>Vestibulum</td>
-                                <td>lacinia</td>
-                                <td>arcu</td>
-                            </tr>
-                            <tr>
-                                <td>1,011</td>
-                                <td>eget</td>
-                                <td>nulla</td>
-                                <td>Class</td>
-                                <td>aptent</td>
-                            </tr>
-                            <tr>
-                                <td>1,012</td>
-                                <td>taciti</td>
-                                <td>sociosqu</td>
-                                <td>ad</td>
-                                <td>litora</td>
-                            </tr>
-                            <tr>
-                                <td>1,013</td>
-                                <td>torquent</td>
-                                <td>per</td>
-                                <td>conubia</td>
-                                <td>nostra</td>
-                            </tr>
-                            <tr>
-                                <td>1,014</td>
-                                <td>per</td>
-                                <td>inceptos</td>
-                                <td>himenaeos</td>
-                                <td>Curabitur</td>
-                            </tr>
-                            <tr>
-                                <td>1,015</td>
-                                <td>sodales</td>
-                                <td>ligula</td>
-                                <td>in</td>
-                                <td>libero</td>
-                            </tr>
+                        <tbody id="tbody">
+
                         </tbody>
                     </table>
                 </div>
             </main>
-            <main role="main"  id="page2" class="hide page bg-light col-md-9 ml-sm-auto col-lg-10 px-4"> 
-                    <div class="py-5 text-center">
-                           
-                            <h2>追溯码信息</h2>
-                            <!-- <p class="lead">Below is an example form built entirely with Bootstrap's form controls. Each required form group has a validation state that can be triggered by attempting to submit the form without completing it.</p> -->
-                          </div>
-                    <div class="col-md-8 order-md-1">
-                <!-- <div class="d-block my-3">
+            <main role="main" id="page2" class="hide page bg-light col-md-9 ml-sm-auto col-lg-10 px-4">
+                <div class="py-5 text-center">
+
+                    <h2>追溯码信息</h2>
+                    <!-- <p class="lead">Below is an example form built entirely with Bootstrap's form controls. Each required form group has a validation state that can be triggered by attempting to submit the form without completing it.</p> -->
+                </div>
+                <div class="col-md-8 order-md-1">
+                    <!-- <div class="d-block my-3">
                     <div class="custom-control custom-radio">
                       <input id="credit" name="paymentMethod" type="radio" class="custom-control-input" checked required>
                       <label class="custom-control-label" for="credit">Credit card</label>
@@ -342,33 +237,34 @@
                       <label class="custom-control-label" for="paypal">PayPal</label>
                     </div>
                   </div> -->
-                  <div class="mb-3">
+                    <div class="mb-3">
                         <label for="batch">批次 </label>
                         <input type="batch" class="form-control" id="batch" placeholder="">
-                      </div>
-                  <div class="mb-3">
+                    </div>
+                    <div class="mb-3">
                         <label for="goods">物料 </label>
                         <input type="goods" class="form-control" id="goods" placeholder="">
-                      </div>
-                  <div class="mb-3">
+                    </div>
+                    <div class="mb-3">
                         <label for="qrcode">追溯ID </label>
-                        <input type="qrcode" class="form-control" id="qrcode" placeholder="">
-                      </div>
+                        <input type="qrcode" class="form-control" id="id" placeholder="">
+                    </div>
 
-                      <hr class="mb-4"> 
-                  <button class="btn btn-primary btn-lg btn-block" type="submit">提 交</button>
-                  </div>
+                    <hr class="mb-4">
+                    <button class="btn btn-primary btn-lg btn-block" type="submit" id="new">提 交</button>
+                </div>
             </main>
-            <main role="main"  id="page3" class="hide page bg-light col-md-9 ml-sm-auto col-lg-10 px-4"> page3</main>
+            <main role="main" id="page3" class="hide page bg-light col-md-9 ml-sm-auto col-lg-10 px-4"> </main>
         </div>
     </div>
+
     <script src="https://unpkg.com/feather-icons/dist/feather.min.js"></script>
     <script>
         feather.replace();
     </script>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" ></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
@@ -380,20 +276,40 @@
         $(function () {
             var app = {
                 init: function () {
-                    $('.nav-link').click(function(){
+                    // $('.alert').alert()
+                    var self = this;
+                    $('.nav-link').click(function () {
                         var to = $(this).attr('to');
+                        if(to == 'page1') self.list();
                         $('.nav-link').removeClass('active');
                         $(this).addClass('active');
 
                         $('.page').hide();
                         $('#' + to).show();
                     });
+                    $('#new').click(function () {
+                        self.new({
+                            batch: $('#batch').val(),
+                            goods: $('#goods').val(),
+                            _id: $('#id').val(),
+                        });
+                    });
                     this.list();
                 },
-                new: function(){
-
+                new: function (qrcode) {
+                    $.post({
+                        url: 'http://47.96.132.15:4096/api/qrcodes/set',
+                        data: qrcode,
+                        // dataType: 'json'
+                    },function(res){
+                        console.log(res);
+                        if (res.success) {
+                            $('.alert').show();
+                        }
+                        // else $('.alert').alert()
+                    })
                 },
-                list: function(){
+                list: function () {
                     // $.get({
                     //     url: 'https://www.audero.it',
                     //     method: 'POST' // This property is ignored
@@ -403,7 +319,19 @@
                         method: 'GET',
                         // dataType: 'jsonp'
                     }, function (res, status) {
-                        console.log(res, status);
+                        // console.log(res, status);
+                        if (res.success) {
+                            var trs = '';
+                            for (var i = 0; i < res.qrcodes.length; i++) {
+                                var item = res.qrcodes[i];
+                                trs += '<tr><td>' + item.batch + '</td><td>' + item.goods +
+                                    '</td><td>' + item.blockId + '</td><td>' + item._id +
+                                    '</td><td>'
+                            }
+                            $('#tbody').html(trs);
+                        } else {
+
+                        }
                     });
                 }
             }
