--- a/public/src/qrcode.html
+++ b/public/src/qrcode.html
@@ -255,7 +255,24 @@
                     <button class="btn btn-primary btn-lg btn-block" type="submit" id="new">提 交</button>
                 </div>
             </main>
-            <main role="main" id="page3" class="hide page bg-light col-md-9 ml-sm-auto col-lg-10 px-4"> </main>
+            <main role="main" id="page3" class="hide page bg-light col-md-9 ml-sm-auto col-lg-10 px-4">
+                <h2>区块列表</h2>
+                <div class="table-responsive">
+                    <table class="table table-striped table-sm">
+                        <thead>
+                            <tr>
+                                <!-- <th>#</th> -->
+                                <th>区块ID</th>
+                                <th>生成时间</th>
+                                <th>高度</th>
+                            </tr>
+                        </thead>
+                        <tbody id="block_tbody">
+
+                        </tbody>
+                    </table>
+                </div>
+            </main>
         </div>
     </div>
 
@@ -277,14 +294,11 @@
         $(function () {
             var app = {
                 init: function () {
-
-
-                    // $('.alert').fadeIn();
-                    // $('.alert').alert()
                     var self = this;
                     $('.nav-link').click(function () {
                         var to = $(this).attr('to');
                         if (to == 'page1') self.list();
+                        else if (to == 'page3') self.loadBlock();
                         $('.nav-link').removeClass('active');
                         $(this).addClass('active');
 
@@ -298,6 +312,7 @@
                             _id: $('#id').val(),
                         });
                     });
+
                     this.list();
                 },
                 new: function (qrcode) {
@@ -338,9 +353,54 @@
 
                         }
                     });
+                },
+                loadBlock: function () {
+                    $.get({
+                        url: '/api/blocks?limit=20&orderBy=timestamp',
+                        method: 'GET',
+                    }, function (res, status) {
+                        if (res.success) {
+                            var trs = '',start = beginEpochTime().getTime();
+                            for (var i = 0; i < res.blocks.length; i++) {
+                                var item = res.blocks[i];
+                                trs += '<tr><td>' + item.id + '</td><td>' + timestampToTime(
+                                        item.timestamp*1000 + start) +
+                                    '</td><td>' + item.height +
+                                    '</td><td>'
+                            }
+                            $('#block_tbody').html(trs);
+                        } else {
+
+                        }
+                    });
                 }
             }
             app.init();
+
+            function timestampToTime(timestamp) {
+                var date = new Date(timestamp); //时间戳为10位需*1000，时间戳为13位的话不需乘1000
+                Y = date.getFullYear();
+                M = t2(date.getMonth() + 1);
+                D = t2(date.getDate());
+                h = t2(date.getHours());
+                m = t2(date.getMinutes());
+                s = t2(date.getSeconds());
+                function t2(n){
+                    return ( n < 10 ? '0' + n : n);
+                }
+
+                return Y + '-' + M + '-' + D + ' ' + h + ':' + m +  ':' + s;
+            }
+
+            function beginEpochTime() {
+                var d = new Date(Date.UTC(2016, 5, 27, 20, 0, 0, 0));
+
+                return d;
+            }
+
+
+
+
         });
     </script>
 </body>
